--- a/blocks.html
+++ b/blocks.html
@@ -1114,18 +1114,198 @@
                     </div>
                   </div>
                 </div>
-                <div class="card">
-                  <div class="sliderBlog">
-                    <div class="sliderBlog-box">
-                      <div class="sliderBlog-item"></div>
+                <div class="card card-slider cardThird-slider">
+                  <div class="card-wrap card-slider-wrap cardThird-slider-wrap">
+                    <div class="card-slider__item cardThird-slider__item">
+                      <div class="cardThird-slider__imgbox card__imgbox" style="background-image: url(img/blog-img-01.jpg);">
+                        <div class="card-warning-text hide">
+                          <p></p>
+                        </div>
+                      </div>
+                      <div class="card__content cardThird__content">
+                        <div class="tagbox">
+                          <div class="tag">
+                            <button class="button button-tag">Региональные новости</button>
+                          </div>
+                          <div class="like-card">
+                            <button class="like-button comment-button"><i class="icon-comment"></i><span class="like-count">23</span></button>
+                            <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
+                          </div>
+                        </div>
+                        <div class="card__title cardThird__title"><a href="#">Как вам прошедший концерт?</a></div>
+                        <div class="card-date"><span>24 Сентября 2018</span></div>
+                      </div>
                     </div>
-                    <div class="sliderBlog-box">
-                      <div class="sliderBlog-item"></div>
+                    <div class="card-slider__item cardThird-slider__item">
+                      <div class="cardThird-slider__imgbox card__imgbox" style="background-image: url(img/blog-img-02.jpg);">
+                        <div class="card-warning-text hide">
+                          <p></p>
+                        </div>
+                      </div>
+                      <div class="card__content cardThird__content">
+                        <div class="tagbox">
+                          <div class="tag">
+                            <button class="button button-tag">Региональные новости</button>
+                          </div>
+                          <div class="like-card">
+                            <button class="like-button comment-button"><i class="icon-comment"></i><span class="like-count">23</span></button>
+                            <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
+                          </div>
+                        </div>
+                        <div class="card__title cardThird__title"><a href="#">Хочется лета, а вокруг одни офисы! Поеду на Ямайку!</a></div>
+                        <div class="card-date"><span>24 Сентября 2018</span></div>
+                      </div>
                     </div>
-                    <div class="sliderBlog-box">
-                      <div class="sliderBlog-item"></div>
+                    <div class="card-slider__item cardThird-slider__item">
+                      <div class="cardThird-slider__imgbox card__imgbox" style="background-image: url(img/blog-img-03.jpg);">
+                        <div class="card-warning-text hide">
+                          <p></p>
+                        </div>
+                      </div>
+                      <div class="card__content cardThird__content">
+                        <div class="tagbox">
+                          <div class="tag">
+                            <button class="button button-tag">Региональные новости</button>
+                          </div>
+                          <div class="like-card">
+                            <button class="like-button comment-button"><i class="icon-comment"></i><span class="like-count">23</span></button>
+                            <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
+                          </div>
+                        </div>
+                        <div class="card__title cardThird__title"><a href="#">После работы надо обязательно поработать ра...</a></div>
+                        <div class="card-date"><span>24 Сентября 2018</span></div>
+                      </div>
+                    </div>
+                    <div class="card-slider__item cardThird-slider__item">
+                      <div class="cardThird-slider__imgbox card__imgbox" style="background-image: url(img/blog-img-02.jpg);">
+                        <div class="card-warning-text hide">
+                          <p></p>
+                        </div>
+                      </div>
+                      <div class="card__content cardThird__content">
+                        <div class="tagbox">
+                          <div class="tag">
+                            <button class="button button-tag">Региональные новости</button>
+                          </div>
+                          <div class="like-card">
+                            <button class="like-button comment-button"><i class="icon-comment"></i><span class="like-count">23</span></button>
+                            <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
+                          </div>
+                        </div>
+                        <div class="card__title cardThird__title"><a href="#">Хочется лета, а вокруг одни офисы! Поеду на Ямайку!</a></div>
+                        <div class="card-date"><span>24 Сентября 2018</span></div>
+                      </div>
+                    </div>
+                    <div class="card-slider__item cardThird-slider__item">
+                      <div class="cardThird-slider__imgbox card__imgbox" style="background-image: url(img/blog-img-01.jpg);">
+                        <div class="card-warning-text hide">
+                          <p></p>
+                        </div>
+                      </div>
+                      <div class="card__content cardThird__content">
+                        <div class="tagbox">
+                          <div class="tag">
+                            <button class="button button-tag">Региональные новости</button>
+                          </div>
+                          <div class="like-card">
+                            <button class="like-button comment-button"><i class="icon-comment"></i><span class="like-count">23</span></button>
+                            <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
+                          </div>
+                        </div>
+                        <div class="card__title cardThird__title"><a href="#">Как вам прошедший концерт?</a></div>
+                        <div class="card-date"><span>24 Сентября 2018</span></div>
+                      </div>
                     </div>
                   </div>
+                </div>
+                <div class="card cardFull-head_special">
+                  <div class="content-title">
+                    <div class="content-titlebox">
+                      <h2>Лучшие блогеры тысячелетия</h2>
+                    </div>
+                  </div>
+                </div>
+                <div class="card card-slider cardFifth-slider">
+                  <div class="card-wrap card-slider-wrap cardFifth-slider-wrap">
+                    <div class="card-slider__item cardFifth-slider__item">
+                      <div class="cardFifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-01.jpg);"></div>
+                    </div>
+                    <div class="card-slider__item cardFifth-slider__item">
+                      <div class="cardFifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-02.jpg);"></div>
+                    </div>
+                    <div class="card-slider__item cardFifth-slider__item">
+                      <div class="cardFifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-03.jpg);"></div>
+                    </div>
+                    <div class="card-slider__item cardFifth-slider__item">
+                      <div class="cardFifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-02.jpg);"></div>
+                    </div>
+                    <div class="card-slider__item cardFifth-slider__item">
+                      <div class="cardFifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-01.jpg);"></div>
+                    </div>
+                    <div class="card-slider__item cardFifth-slider__item">
+                      <div class="cardFifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-03.jpg);"></div>
+                    </div>
+                    <div class="card-slider__item cardFifth-slider__item">
+                      <div class="cardFifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-02.jpg);"></div>
+                    </div>
+                    <div class="card-slider__item cardFifth-slider__item">
+                      <div class="cardFifth-slider__imgbox card__imgbox" style="background-image: url(img/person-photo-01.jpg);"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card">
+                  <hr class="card-hr">
+                </div>
+                <article class="article articlePreview">
+                  <div class="card">
+                    <div class="article-imgwrap article-imgwrap_slim">
+                      <div class="article-imgbox article-imgbox_slim" style="background-image: url(img/article-prev-img-01.jpg);"></div>
+                    </div>
+                    <div class="tagbox">
+                      <div class="tag">
+                        <div class="card-date card-date_big"><span>24 Сентября 2018, Мацинова Елена</span></div>
+                      </div>
+                      <div class="like-card">
+                        <button class="like-button comment-button"><i class="icon-comment"></i><span class="like-count">23</span></button>
+                        <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
+                      </div>
+                    </div>
+                    <div class="content-title">
+                      <div class="article-title content-titlebox">
+                        <h3>Хочется лета, а вокруг одни офисы! Поеду на Ямайку!</h3>
+                      </div>
+                    </div>
+                    <div class="article-text articlePreview-text">
+                      <p>Ямайка находится в зоне тропического климата с господством северо-восточных пассатов, заметно влияющих, наравне с показателем абсолютной высоты местности, на климат страны В столичном районе средняя температура за год меняется от 24 до 27 °C, а в местечке Гордон-Хилл в горах Блу-Маунтинс — от температура температура температура</p>
+                    </div>
+                  </div>
+                </article>
+                <article class="article articlePreview">
+                  <div class="card">
+                    <div class="article-imgwrap article-imgwrap_slim">
+                      <div class="article-imgbox article-imgbox_slim" style="background-image: url(img/article-prev-img-02.jpg);"></div>
+                    </div>
+                    <div class="tagbox">
+                      <div class="tag">
+                        <div class="card-date card-date_big"><span>24 Сентября 2018, Мацинова Елена</span></div>
+                      </div>
+                      <div class="like-card">
+                        <button class="like-button comment-button"><i class="icon-comment"></i><span class="like-count">23</span></button>
+                        <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
+                      </div>
+                    </div>
+                    <div class="content-title">
+                      <div class="article-title content-titlebox">
+                        <h3>Как вам прошедший концерт?</h3>
+                      </div>
+                    </div>
+                    <div class="article-text articlePreview-text">
+                      <p>Ямайка находится в зоне тропического климата с господством северо-восточных пассатов, заметно влияющих, наравне с показателем абсолютной высоты местности, на климат страны В столичном районе средняя температура за год меняется от 24 до 27 °C, а в местечке Гордон-Хилл в горах Блу-Маунтинс — от...</p>
+                    </div>
+                  </div>
+                </article>
+                <div class="card">
+                  <hr class="card-hr">
                 </div>
               </div>
             </div>
