--- a/calendar2.html
+++ b/calendar2.html
@@ -533,13 +533,10 @@
           <div class="col-xl-3">
             <div class="aside-wrap" id="aside">
               <div class="left-navigation-pseudo collapse show" id="leftNavigationPseudo"></div>
-              <!-- TABVIDGET-->
-              <div class="vidget-box vidget-tabbox" id="tabvidget1">
-                <nav>
-                  <div class="nav nav-tabs vidget-items" id="nav-tab" role="tablist"><a class="nav-item vidget-item" id="nav-home-tab" data-toggle="tab" href="#vidget1-tab1" role="tab" aria-controls="vidget1-tab1" aria-selected="false">Годовой отчет</a><a class="nav-item vidget-item" id="nav-profile-tab" data-toggle="tab" href="#vidget1-tab2" role="tab" aria-controls="vidget1-tab2" aria-selected="false">Территория ОМК</a><a class="nav-item vidget-item active" id="nav-contact-tab" data-toggle="tab" href="#vidget1-tab3" role="tab" aria-controls="vidget1-tab3" aria-selected="true">ОМК-команда</a></div>
-                </nav>
-                <div class="tab-content vidget-tabs" id="nav-tabContent">
-                  <div class="tab-pane vidget-tab fade show active" id="vidget1-tab1" role="tabpanel" aria-labelledby="nav-contact-tab">
+              <!-- VIDGET-SLIDER-->
+              <div class="vidget-slider-wrap"> 
+                <div class="vidget-box vidget-tabbox vidget-slider">
+                  <div class="tab-pane vidget-tab vidget-slider__tab" id="vidget1-tab1">
                     <div class="vidget-content">
                       <div class="vidget-content__left">
                         <div class="vidget-head">
@@ -552,7 +549,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="tab-pane vidget-tab fade" id="vidget1-tab2" role="tabpanel" aria-labelledby="nav-profile-tab">
+                  <div class="tab-pane vidget-tab vidget-slider__tab" id="vidget1-tab2">
                     <div class="vidget-content">
                       <div class="vidget-content__left">
                         <div class="vidget-head">
@@ -565,7 +562,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="tab-pane vidget-tab fade" id="vidget1-tab3" role="tabpanel" aria-labelledby="nav-home-tab">
+                  <div class="tab-pane vidget-tab vidget-slider__tab" id="vidget1-tab3">
                     <div class="vidget-content">
                       <div class="vidget-content__left">
                         <div class="vidget-head">
@@ -666,7 +663,7 @@
               <!-- VIDGET-SLIDER-->
               <div class="vidget-slider-wrap"> 
                 <div class="vidget-box vidget-tabbox vidget-slider">
-                  <div class="vidget-tab vidget-slider__tab fade-" id="vidget2-tab3">
+                  <div class="vidget-tab vidget-slider__tab" id="vidget2-tab3">
                     <div class="vidget-content vidget-slider__content">
                       <div class="vidget-content__left">
                         <div class="vidget-head">
@@ -683,7 +680,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="vidget-tab vidget-slider__tab fade-" id="vidget2-tab2"> 
+                  <div class="vidget-tab vidget-slider__tab" id="vidget2-tab2"> 
                     <div class="vidget-content vidget-slider__content">
                       <div class="vidget-content__left">
                         <div class="vidget-head">
@@ -700,7 +697,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="vidget-tab vidget-slider__tab fade-" id="vidget2-tab1">
+                  <div class="vidget-tab vidget-slider__tab" id="vidget2-tab1">
                     <div class="vidget-content vidget-slider__content">
                       <div class="vidget-content__left">
                         <div class="vidget-head">
