--- a/post.html
+++ b/post.html
@@ -822,7 +822,7 @@
               <div class="card cardFull-head_special"></div>
               <div class="cards">
                 <article class="article">
-                  <div class="card cardFull-head_special">
+                  <div class="card card_slim">
                     <div class="article-imgwrap article-imgwrap_slim">
                       <div class="article-imgbox article-imgbox_head" style="background-image: url(img/post-img-01.jpg);"></div>
                     </div>
@@ -836,7 +836,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="card cardFull-head_special">
+                  <div class="card card_slim">
                     <div class="content-title">
                       <div class="content-titlebox">
                         <h3>Более 10,6 млн тонн рулонного проката произвел литейно-прокатный комплекс ВМЗ за 10 лет работы</h3>
@@ -879,9 +879,88 @@
                 </article>
               </div>
               <div class="card">
+                <div class="tagbox">
+                  <div class="tag">
+                    <div class="card-date card-date_big"><span>24 Сентября 2018</span></div>
+                  </div>
+                  <div class="like-card">
+                    <button class="like-button comment-button"><i class="icon-comment"></i><span class="like-count">23</span></button>
+                    <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <hr class="card-hr">
+              </div>
+              <div class="card card_slim">
                 <div class="content-title">
                   <div class="content-titlebox">
                     <h2>Комментарии</h2>
+                  </div>
+                </div>
+              </div>
+              <div class="card card_slim">
+                <div class="comment">
+                  <div class="comment-box">
+                    <div class="comment__avatar" style="background-image: url(img/person-photo-01.jpg)"></div>
+                    <div class="comment__content">
+                      <div class="tagbox comment__tagbox">
+                        <div class="tag">
+                          <div class="comment__nickname"><span>ЮЛИЯ ШХИЯНЦ</span></div>
+                        </div>
+                        <div class="like-card">
+                          <button class="like-button comment-button like-button_thin"><i>#</i><span class="like-count">120</span></button>
+                          <button class="like-button like-button_thin"><i class="icon-like"></i><span class="like-count">86</span></button>
+                        </div>
+                      </div>
+                      <div class="comment__date"><span>12 Декабря 2018, 16:32</span></div>
+                      <div class="comment__text">
+                        <p>В ходе горячих испытаний оборудования покрытие из УФ-лака было нанесено на гладкие трубы диаметром 426 мм. Параллельно с пуско-наладкой оборудования специалисты фирмы Venjakob провели теоретическое и практическое обучение работе с установкой для сотрудников ВМЗ, включая ремонтные службы, технологов и автоматчиков.</p>
+                      </div>
+                      <div class="comment__link"><a href="#">Ответить</a></div>
+                    </div>
+                  </div>
+                  <div class="comment">
+                    <div class="comment-box">
+                      <div class="comment__avatar" style="background-image: url(img/person-photo-02.jpg)"></div>
+                      <div class="comment__content">
+                        <div class="tagbox comment__tagbox">
+                          <div class="tag">
+                            <div class="comment__nickname"><span>ПЕТР ТУШИН</span></div>
+                          </div>
+                          <div class="like-card">
+                            <button class="like-button comment-button like-button_thin"><i>#</i><span class="like-count">120</span></button>
+                            <button class="like-button like-button_thin"><i class="icon-like"></i><span class="like-count">86</span></button>
+                          </div>
+                        </div>
+                        <div class="comment__date"><span>12 Декабря 2018, 16:32</span></div>
+                        <div class="comment__text">
+                          <p>Параллельно с пуско-наладкой оборудования специалисты фирмы Venjakob провели теоретическое и практическое обучение работе с установкой для сотрудников ВМЗ.</p>
+                        </div>
+                        <div class="comment__link"><a href="#">Ответить</a></div>
+                      </div>
+                    </div>
+                    <div class="comment">
+                      <div class="comment-box">
+                        <div class="comment__avatar" style="background-image: url(img/person-photo-03.jpg)"></div>
+                        <div class="comment__content">
+                          <div class="tagbox comment__tagbox">
+                            <div class="tag">
+                              <div class="comment__nickname"><span>СВЕТЛАНА НИКОЛАШИНА</span></div>
+                            </div>
+                            <div class="like-card">
+                              <button class="like-button comment-button like-button_thin"><i>#</i><span class="like-count">120</span></button>
+                              <button class="like-button like-button_thin"><i class="icon-like"></i><span class="like-count">86</span></button>
+                            </div>
+                          </div>
+                          <div class="comment__date"><span>12 Декабря 2018, 16:32</span></div>
+                          <div class="comment__text">
+                            <p>Мы стремимся к тому, чтобы работа в ОМК помогала сотрудникам компании реализовывать свой потенциал и раскрывать свои способности Активно развиваясь, Компания делает реальными перспективы профессионального и карьерного роста. Для обеспечения взаимовыгодного партнерства и соблюдения трудовых прав мы активно поддерживаем и развиваем социальный диалог с сотрудниками и их представителями. Читать подробнее о работе с персоналом. Мы разработали специальную форму − Приложение к договору «Требование о соблюдении законодательства в области охраны труда, промышленной, пожарной безопасности, охраны окружающей среды». Подписывая его, подрядчик обязуется следовать процедурам, правилам и инструкциям ОМК в области охраны труда, промышленной, экологической и экономической безопасности с целью исключения или минимизации возможного ущерба, наносимого окружающей среде, здоровью сотрудников ОМК, посетителей и третьих лиц.</p>
+                          </div>
+                          <div class="comment__link"><a href="#">Ответить</a></div>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
