--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.min.css">
     <link rel="stylesheet" href="slick/slick-theme.css">
     <link rel="stylesheet" href="slick/slick.css">
-    <link href="css/style.css?0.1.4" rel="stylesheet">
+    <link href="css/style.css?0.1.6" rel="stylesheet">
     <title>ОМК</title>
   </head>
   <body>
@@ -173,7 +173,6 @@
               <div class="col-xl-1 align-self-xl-start"><a class="headerNavSystem__item" href="#">
                   <div class="headerNavSystem-icon-box"><i class="icon-money"></i></div>
                   <div class="headerNavSystem__link"><span>РОСТЕХ</span></div></a></div>
-              <!-- Системы-->
               <div class="col-xl-2 d-table">
                 <div class="headerNavSystem-button-inn header-button-inn button-inn">
                   <div class="nav-more btn-group">
@@ -192,8 +191,8 @@
                   <button class="button header-button headerNavSystem-button" id="headerNavSettingControl" type="button" data-toggle="collapse" data-target="#headerNavSetting" aria-expanded="false" aria-controls="headerNavSetting">Настройка</button>
                 </div>
               </div>
-              <!-- /.col-xl-2-->
-              <!-- Настроки-->
+            </div>
+            <div class="row">
               <div class="col-xl-7 offset-xl-5">
                 <div class="nav-setting collapse" id="headerNavSetting">
                   <h4 class="nav-setting__title">Для настройки вашего меню, выберите нужные иконки:</h4>
@@ -426,10 +425,6 @@
                 </div>
               </div>
             </div>
-            <!-- /.row-->
-            <!-- /.headerNavSystem-wrap-->
-            <!-- /.headerNavSystem-->
-            <!-- /.container-->
           </div>
         </nav>
       </div>
@@ -518,14 +513,13 @@
               <div class="breadcrumb-wrap">
                 <div class="breadcrumb">
                   <div class="breadcrumb-group"><a class="breadcrumb__link" href="#">Главная</a><a class="breadcrumb__link" href="#">Новости</a></div>
-                  <div class="breadcrumb-back"><a class="breadcrumb__link" href="#"><<Назад</a></div>
+                  <div class="breadcrumb-back"><a class="breadcrumb__link" href="#">&lt;&lt;Назад</a></div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <!-- /.content-->
     </header>
     <section class="content section">
       <div class="container">
@@ -639,24 +633,24 @@
                     </tbody>
                   </table>
                 </div>
-                <div class="events" id="event-6"><a class="event" href="calendar.html#event1-06-10-2018">
+                <div class="events" id="event-6"><a class="event calendar-lnk" href="calendar.html#events-06-10-2018">
                     <div class="event-title"><span>День металлурга</span></div>
-                    <div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/article-img-01.jpg);"></div></a><a class="event" href="calendar.html#event2-06-10-2018">
+                    <div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/article-img-01.jpg);"></div></a><a class="event calendar-lnk" href="calendar.html#event2-06-10-2018">
                     <div class="event-title"><span>День поедателей йогуртов</span></div>
-                    <div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/article-img-01.jpg);"></div></a><a class="event" href="calendar.html#event3-06-10-2018">
+                    <div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/article-img-01.jpg);"></div></a><a class="event calendar-lnk" href="calendar.html#event3-06-10-2018">
                     <div class="event-title"><span>День металлурга 2</span></div>
                     <div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/article-img-01.jpg);"></div></a></div>
-                <div class="events" id="event-14"><a class="event" href="calendar2.html#event1-14-10-2018">
+                <div class="events" id="event-14"><a class="event calendar-lnk" href="calendar2.html#events-14-10-2018">
                     <div class="event-title"><span>1 День великого праздника в две строки</span></div>
-                    <div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/event-img-01.jpg);"></div></a><a class="event" href="calendar2.html#event2-14-10-2018">
+                    <div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/event-img-01.jpg);"></div></a><a class="event calendar-lnk" href="calendar2.html#event2-14-10-2018">
                     <div class="event-title"><span>2 День великого праздника в две строки</span></div>
-                    <div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/event-img-01.jpg);"></div></a><a class="event" href="calendar2.html#event3-14-10-2018">
+                    <div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/event-img-01.jpg);"></div></a><a class="event calendar-lnk" href="calendar2.html#event3-14-10-2018">
                     <div class="event-title"><span>3 День великого праздника в две строки</span></div>
                     <div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/event-img-01.jpg);"></div></a></div>
-                <div class="events" id="event-20"><a class="event" href="calendar2.html#event1-24-10-2018">
+                <div class="events" id="event-20"><a class="event calendar-lnk" href="calendar3.html#events-24-10-2018">
                     <div class="event-title"><span>День поедателей йогуртов</span></div>
                     <div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/article-img-02.jpg);"></div></a></div>
-                <div class="events" id="event-24"><a class="event" href="calendar2.html#event1-24-10-2018">
+                <div class="events" id="event-24"><a class="event calendar-lnk" href="calendar3.html#events-24-10-2018">
                     <div class="event-title"><span>День поедателей йогуртов</span></div>
                     <div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/article-img-05.jpg);"></div></a></div>
               </div>
@@ -895,7 +889,7 @@
                   </div>
                 </div>
               </div>
-              <div class="card cardHalf cardHalf-slider">
+              <div class="card cardHalf-slider">
                 <div class="cardHalf-slider-wrap card-wrap">
                   <div class="cardHalf-slider__item">
                     <div class="cardHalf-slider__imgbox card__imgbox" style="background-image: url(img/card-gif.gif);"></div>
@@ -3145,7 +3139,7 @@
       <script src="js/libs/validate/jquery.validate.min.js"></script>
       <script src="js/libs/jquery.maskedinput.min.js"></script>
       <!-- main script-->
-      <script src="js/main/main.js?0.1.4"></script>
+      <script src="js/main/main.js?0.1.6"></script>
       <!--if lte IE 9
       link(href='ie9/css/bootstrap-ie9.css', rel='stylesheet')
       link(rel='stylesheet', href='ie9/css/style-ie9.css')
