--- a/calendar2.html
+++ b/calendar2.html
@@ -979,6 +979,9 @@
                     <div class="article-imgbox article-imgbox_full" style="background-image: url(img/news-twothirds-img-01.jpg);"></div>
                   </div>
                   <div class="article-quote">
+                    <div class="article-text">
+                      <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке</p>
+                    </div>
                     <blockquote class="article-blockquote">«Металлургия – базовая отрасль промышленности, одна из основных. Не развивая производство продукции из стали, не развивая производство листа, труб, колес для железнодорожных вагонов мы будем не конкурентоспособны. Такие предприятия, где используются современные технологии и оборудование, где оптимизированы все бизнес-процессы, где активно применяются цифровые технологии, позволяют развивать всю нашу промышленность. ВМЗ выпускает конкурентоспособную продукцию, аналогов которой в мире не так много. Можно только пожелать успехов предприятию, порадоваться за регион. Что еще важно: предприятие выполняет социальные обязательства, развивая территории, на которых оно работает», - отметил после посещения ВМЗ заместитель министра промышленности и торговли России Виктор Евтухов.</blockquote>
                   </div>
                   <div class="article-text">
